--- a/erpbutequinhowpf/MainWindow.xaml
+++ b/erpbutequinhowpf/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:erpbutequinhowpf"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        mc:Ignorable="d" Height="600" Width="1080" Foreground="White" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="None"
+        mc:Ignorable="d" Height="600" Width="1080" Foreground="White" 
+        ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow"
         >
     <Window.Resources>
         <Storyboard x:Key="OpenMenu">
