--- a/erpbutequinhowpf/views/CadastroFuncionario.xaml
+++ b/erpbutequinhowpf/views/CadastroFuncionario.xaml
@@ -1,15 +1,17 @@
-﻿<Window x:Class="erpbutequinhowpf.views.CadastroCliente"
+﻿<Window x:Class="erpbutequinhowpf.views.CadastroFuncionario"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Cadastro de cliente" Height="550" Width="800">
+        Title="CadastroFuncionario"  Height="550" Width="800">
 
     <Grid>
         <Grid VerticalAlignment="Bottom" Margin="10,0,10,10" Height="480">
-            <Label Content="Cadastro de cliente" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5" Foreground="Gray" FontSize="18"/>
+            <Label Content="Cadastro de funcionário" HorizontalAlignment="Center" 
+                   VerticalAlignment="Top" Margin="5" 
+                   Foreground="Gray" FontSize="18"/>
             <StackPanel VerticalAlignment="Center" Margin="15">
                 <Grid Margin="10">
                     <Grid.ColumnDefinitions>
@@ -49,7 +51,7 @@
                              materialDesign:HintAssist.Hint="CPF" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                              FontFamily="Champagne &amp; Limousines"/>
-                    
+
                     <TextBox Margin="0, 10, 10, 10" Grid.Column="1" Grid.Row="1"
                              Name="TelefoneTextBox"
                              Text="{Binding Telefone, Mode=TwoWay}"
@@ -131,10 +133,10 @@
                                  FontFamily="Champagne &amp; Limousines"/>
                 </StackPanel>
                -->
-               
+
             </StackPanel>
         </Grid>
-        
+
         <!--<TextBlock Text="ESQUECEU A SENHA?" 
                        HorizontalAlignment="Center"
                        VerticalAlignment="Bottom" 
