--- a/erpbutequinhowpf/views/menu/UserPesquisaControl.xaml
+++ b/erpbutequinhowpf/views/menu/UserPesquisaControl.xaml
@@ -7,7 +7,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Button Content="Cliente" HorizontalAlignment="Left" Margin="160,187,0,0" VerticalAlignment="Top" Width="106" Click="btnOpenPesquisaCliente"/>
+        <Button Content="Cliente"
+                HorizontalAlignment="Left"
+                Margin="160,187,0,0" 
+                VerticalAlignment="Top"
+                Width="106" Click="btnOpenPesquisaCliente"/>
         <Button Content="Funcionário" HorizontalAlignment="Left" Margin="523,187,0,0" VerticalAlignment="Top" Width="140" Click="btnOpenPesquisaFuncionario"/>
 
     </Grid>
